<?xml version="1.0"?>
<package format="2">
  <name>phoxi_bringup</name>
  <version>0.0.0</version>
  <description>The phoxi bringup package</description>

  <maintainer email="nishidalab@todo.todo">nishidalab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
