<?xml version="1.0"?>
<package format="2">
  <name>phoxi_bringup</name>
  <version>0.0.0</version>
  <description>The phoxi bringup package</description>

  <maintainer email="nishidalab@todo.todo">nishidalab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>phoxi_camera_srvs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>phoxi_camera</build_depend>

  <exec_depend>phoxi_img_converter</exec_depend>
  <exec_depend>phoxi_camera_info_pub</exec_depend>
  <exec_depend>phoxi_camera</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
