<?xml version="1.0"?>
<package format="2">
  <name>phoxi_camera_srvs</name>
  <version>0.0.0</version>
  <description>The phoxi_camera_srvs package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
