<?xml version="1.0"?>
<package format="2">
  <name>phoxi_img_converter</name>
  <version>0.0.0</version>
  <description>The image_convert package</description>

  <maintainer email="nishidalab@todo.todo">nishidalab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>roslaunch</test_depend>

</package>
