<?xml version="1.0"?>
<package format="2">
  <name>phoxi_img_converter</name>
  <version>0.0.0</version>
  <description>The image_convert package</description>

  <maintainer email="nishidalab@todo.todo">nishidalab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
