<?xml version="1.0"?>
<package format="2">
  <name>phoxi_ros_pkg</name>
  <version>1.0.0</version>
  <description>The phoxi_ros_pkg package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/denso_apps</url>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>phoxi_bringup</exec_depend>
  <exec_depend>phoxi_camera_info_pub</exec_depend>
  <exec_depend>phoxi_img_converter</exec_depend>
  <exec_depend>sensor_frame_broadcaster</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
