<?xml version="1.0"?>
<package format="2">
  <name>sensor_frame_broadcaster</name>
  <version>1.0.0</version>
  <description>The sensor_frame_broadcaster package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <build_depend>cmake_modules</build_depend>

</package>
